--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .full-screen {
+  height: 90vh;
   padding: 8rem 0;
 }
 
@@ -181,7 +182,7 @@ strong {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 999999;
+  z-index: 999;
   will-change: transform;
   transition: transform 200ms linear;
 }
@@ -710,4 +711,105 @@ strong {
 
 .contact-img {
   width: 100%;
+}
+
+#button {
+  background-color: #FF9800;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s,
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+  animation: ToTop 3s linear infinite 0s;
+}
+
+@keyframes ToTop {
+  0% {
+    bottom: 0;
+  }
+
+  33% {
+    bottom: 5px;
+  }
+
+  66% {
+    bottom: 10px;
+  }
+
+  100% {
+    bottom: 0;
+  }
+}
+
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+
+#button:active {
+  background-color: #555;
+}
+
+#button.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Styles for the content section */
+
+.content {
+  width: 77%;
+  margin: 50px auto;
+  font-family: 'Merriweather', serif;
+  font-size: 17px;
+  color: #6c767a;
+  line-height: 1.9;
+}
+
+@media (min-width: 500px) {
+  .content {
+    width: 43%;
+  }
+
+  #button {
+    margin: 30px;
+  }
+}
+
+.content h1 {
+  margin-bottom: -10px;
+  color: #03a9f4;
+  line-height: 1.5;
+}
+
+.content h3 {
+  font-style: italic;
+  color: #96a2a7;
+}
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 6px;
+  background-color: #F9A826;
+  z-index: 1000;
 }
